# python-project-template

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
