[tool.poetry]
name = "python-project-template"
version = "0.1.1"
description = ""
authors = ["Sho Shimauchi <sho.shimauchi@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
isort = "^4.3"
pre-commit = "^1.18"
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
pytest-mock = "^1.10"
scripttest = "^1.3"
nox = "^2019.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
